package.json updates

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-data-grid",
+  "name": "dealstat-grid",
   "private": true,
-  "description": "Data grid for React",
+  "description": "dealstat rdg-edits",
   "main": "src/index.js",
   "scripts": {
     "pretest": "npm run eslint",
