--- a/package.json
+++ b/package.json
@@ -108,5 +108,6 @@
   "bugs": {
     "url": "https://github.com/adazzle/react-data-grid/issues"
   },
-  "homepage": "https://github.com/adazzle/react-data-grid"
+  "homepage": "https://github.com/adazzle/react-data-grid",
+  "version": "1.0.1"
 }
