--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "es5-shim": "^4.0.3",
     "fs-extra": "^0.30.0",
     "keymirror": "^0.1.1",
+    "lerna": "2.0.0-beta.34",
     "object-assign": "^4.1.1",
     "prop-types": "^15.5.10",
     "react-contextmenu": "^2.9.2",
